@@ -13,6 +13,7 @@
 
 package org.eclipse.jetty.http;
 
+import java.util.AbstractSet;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.EnumSet;
@@ -22,7 +23,10 @@ import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Objects;
 import java.util.Set;
+import java.util.TreeSet;
+import java.util.concurrent.TimeUnit;
 import java.util.function.BiFunction;
 import java.util.function.BiPredicate;
 import java.util.function.Supplier;
@@ -34,9 +38,16 @@ import java.util.stream.StreamSupport;
 /**
  * <p>An ordered collection of {@link HttpField}s that represent the HTTP headers
  * or HTTP trailers of an HTTP request or an HTTP response.</p>
+ *
  * <p>{@link HttpFields} is immutable and typically used in server-side HTTP requests
  * and client-side HTTP responses, while {@link HttpFields.Mutable} is mutable and
  * typically used in server-side HTTP responses and client-side HTTP requests.</p>
+ *
+ * <p>Access is always more efficient using {@link HttpHeader} keys rather than {@link String} field names.</p>
+ *
+ * <p>The primary implementations of {@code HttpFields} have been optimized assuming few
+ * lookup operations, thus typically if many {@link HttpField}s need to looked up, it may be
+ * better to use an {@link Iterator} to find multiple fields in a single iteration.</p>
  */
 public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
 {
@@ -346,10 +357,12 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
     /**
      * <p>Returns whether this instance contains the given field name.</p>
      * <p>The comparison of field name is case-insensitive via
-     * {@link HttpField#is(String)}.
+     * {@link HttpField#is(String)}. If possible, it is more efficient to use
+     * {@link #contains(HttpHeader)}.
      *
      * @param name the case-insensitive field name to search for
      * @return whether this instance contains the given field name
+     * @see #contains(HttpHeader) 
      */
     default boolean contains(String name)
     {
@@ -408,7 +421,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
      * <p>Returns the encoded value of the first field with the given field name,
      * or {@code null} if no such field is present.</p>
      * <p>The comparison of field name is case-insensitive via
-     * {@link HttpField#is(String)}.</p>
+     * {@link HttpField#is(String)}. If possible, it is more efficient to use {@link #get(HttpHeader)}.</p>
      * <p>In case of multi-valued fields, the returned value is the encoded
      * value, including commas and quotes, as returned by {@link HttpField#getValue()}.</p>
      *
@@ -416,6 +429,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
      * @return the raw value of the first field with the given field name,
      * or {@code null} if no such field is present
      * @see HttpField#getValue()
+     * @see #get(HttpHeader) 
      */
     default String get(String name)
     {
@@ -516,10 +530,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
         if (val == null)
             return -1;
 
-        final long date = DateParser.parseDate(val);
-        if (date == -1)
-            throw new IllegalArgumentException("Cannot convert date: " + val);
-        return date;
+        return TimeUnit.SECONDS.toMillis(HttpDateTime.parse(val).toEpochSecond());
     }
 
     /**
@@ -593,11 +604,56 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
      * <p>Returns a {@link Set} of the field names.</p>
      * <p>Case-sensitivity of the field names is preserved.</p>
      *
-     * @return a {@link Set} of the field names
+     * @return an immutable {@link Set} of the field names. Changes made to the
+     * {@code HttpFields} after this call are not reflected in the set.
      */
     default Set<String> getFieldNamesCollection()
     {
-        return stream().map(HttpField::getName).collect(Collectors.toSet());
+        Set<HttpHeader> seenByHeader = EnumSet.noneOf(HttpHeader.class);
+        Set<String> buildByName = null;
+        List<String> list = new ArrayList<>(size());
+
+        for (HttpField f : this)
+        {
+            HttpHeader header = f.getHeader();
+            if (header == null)
+            {
+                if (buildByName == null)
+                    buildByName = new TreeSet<>(String::compareToIgnoreCase);
+                if (buildByName.add(f.getName()))
+                    list.add(f.getName());
+            }
+            else if (seenByHeader.add(header))
+            {
+                list.add(f.getName());
+            }
+        }
+
+        Set<String> seenByName = buildByName;
+
+        // use the list to retain a rough ordering
+        return new AbstractSet<>()
+        {
+            @Override
+            public Iterator<String> iterator()
+            {
+                return list.iterator();
+            }
+
+            @Override
+            public int size()
+            {
+                return list.size();
+            }
+
+            @Override
+            public boolean contains(Object o)
+            {
+                if (o instanceof String s)
+                    return seenByName != null && seenByName.contains(s) || seenByHeader.contains(HttpHeader.CACHE.get(s));
+                return false;
+            }
+        };
     }
 
     /**
@@ -897,8 +953,8 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable add(String name, String value)
         {
-            if (value == null)
-                throw new IllegalArgumentException("null value");
+            Objects.requireNonNull(name);
+            Objects.requireNonNull(value);
             return add(new HttpField(name, value));
         }
 
@@ -913,6 +969,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable add(String name, long value)
         {
+            Objects.requireNonNull(name);
             return add(new HttpField.LongValueHttpField(name, value));
         }
 
@@ -927,6 +984,8 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable add(HttpHeader header, HttpHeaderValue value)
         {
+            Objects.requireNonNull(header);
+            Objects.requireNonNull(value);
             return add(header, value.toString());
         }
 
@@ -941,8 +1000,8 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable add(HttpHeader header, String value)
         {
-            if (value == null)
-                throw new IllegalArgumentException("null value");
+            Objects.requireNonNull(header);
+            Objects.requireNonNull(value);
             return add(new HttpField(header, value));
         }
 
@@ -957,6 +1016,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable add(HttpHeader header, long value)
         {
+            Objects.requireNonNull(header);
             return add(new HttpField.LongValueHttpField(header, value));
         }
 
@@ -968,6 +1028,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable add(HttpField field)
         {
+            Objects.requireNonNull(field);
             ListIterator<HttpField> i = listIterator(size());
             i.add(field);
             return this;
@@ -990,6 +1051,28 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
         }
 
         /**
+         * <p>Adds a field associated with a list of values.</p>
+         *
+         * @param name the name of the field
+         * @param list the List value of the field.
+         * @return this builder
+         */
+        default Mutable add(String name, List<String> list)
+        {
+            Objects.requireNonNull(name);
+            Objects.requireNonNull(list);
+            if (list.isEmpty())
+                return this;
+            if (list.size() == 1)
+            {
+                String v = list.get(0);
+                return add(name, v == null ? "" : v);
+            }
+            HttpField field = new HttpField.MultiHttpField(name, list);
+            return add(field);
+        }
+
+        /**
          * <p>Adds the given value(s) to the {@link HttpField} with the given name,
          * encoding them as comma-separated if necessary,
          * unless they are already present in existing fields with the same name.</p>
@@ -1000,6 +1083,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable addCSV(HttpHeader header, String... values)
         {
+            Objects.requireNonNull(header);
             QuotedCSV existing = null;
             for (HttpField f : this)
             {
@@ -1027,6 +1111,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable addCSV(String name, String... values)
         {
+            Objects.requireNonNull(name);
             QuotedCSV existing = null;
             for (HttpField f : this)
             {
@@ -1054,6 +1139,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable addDateField(String name, long date)
         {
+            Objects.requireNonNull(name);
             add(name, DateGenerator.formatDate(date));
             return this;
         }
@@ -1083,6 +1169,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default void ensureField(HttpField field)
         {
+            Objects.requireNonNull(field);
             HttpHeader header = field.getHeader();
             // Is the field value multi valued?
             if (field.getValue().indexOf(',') < 0)
@@ -1114,6 +1201,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable put(HttpField field)
         {
+            Objects.requireNonNull(field);
             boolean put = false;
             ListIterator<HttpField> i = listIterator();
             while (i.hasNext())
@@ -1148,6 +1236,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable put(String name, String value)
         {
+            Objects.requireNonNull(name);
             if (value == null)
                 return remove(name);
             return put(new HttpField(name, value));
@@ -1164,6 +1253,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable put(HttpHeader header, HttpHeaderValue value)
         {
+            Objects.requireNonNull(header);
             if (value == null)
                 return remove(header);
             return put(new HttpField(header, value.toString()));
@@ -1180,13 +1270,14 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable put(HttpHeader header, String value)
         {
+            Objects.requireNonNull(header);
             if (value == null)
                 return remove(header);
             return put(new HttpField(header, value));
         }
 
         /**
-         * Set a field.
+         * <p>Puts a field associated with a list of values.</p>
          *
          * @param name the name of the field
          * @param list the List value of the field. If null the field is cleared.
@@ -1194,19 +1285,17 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable put(String name, List<String> list)
         {
-            // TODO: this implementation should not add
-            //  multiple headers, see RFC 9110 section 5.3.
-            boolean first = true;
-            for (String s : list)
+            Objects.requireNonNull(name);
+            if (list == null || list.isEmpty())
+                return remove(name);
+            if (list.size() == 1)
             {
-                HttpField field = new HttpField(name, s);
-                if (first)
-                    put(field);
-                else
-                    add(field);
-                first = false;
+                String value = list.get(0);
+                return put(name, value == null ? "" : value);
             }
-            return this;
+
+            HttpField field = new HttpField.MultiHttpField(name, list);
+            return put(field);
         }
 
         /**
@@ -1221,6 +1310,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable putDate(HttpHeader name, long date)
         {
+            Objects.requireNonNull(name);
             return put(name, DateGenerator.formatDate(date));
         }
 
@@ -1236,6 +1326,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable putDate(String name, long date)
         {
+            Objects.requireNonNull(name);
             return put(name, DateGenerator.formatDate(date));
         }
 
@@ -1249,6 +1340,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable put(HttpHeader header, long value)
         {
+            Objects.requireNonNull(header);
             if (value == 0 && header == HttpHeader.CONTENT_LENGTH)
                 return put(HttpFields.CONTENT_LENGTH_0);
             return put(new HttpField.LongValueHttpField(header, value));
@@ -1264,6 +1356,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable put(String name, long value)
         {
+            Objects.requireNonNull(name);
             if (value == 0 && HttpHeader.CONTENT_LENGTH.is(name))
                 return put(HttpFields.CONTENT_LENGTH_0);
             return put(new HttpField.LongValueHttpField(name, value));
@@ -1347,7 +1440,9 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable computeField(HttpHeader header, BiFunction<HttpHeader, List<HttpField>, HttpField> computeFn)
         {
-            return put(computeFn.apply(header, stream().filter(f -> f.getHeader() == header).collect(Collectors.toList())));
+            Objects.requireNonNull(header);
+            HttpField result = computeFn.apply(header, stream().filter(f -> f.getHeader() == header).toList());
+            return result != null ? put(result) : remove(header);
         }
 
         /**
@@ -1360,7 +1455,9 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable computeField(String name, BiFunction<String, List<HttpField>, HttpField> computeFn)
         {
-            return put(computeFn.apply(name, stream().filter(f -> f.is(name)).collect(Collectors.toList())));
+            Objects.requireNonNull(name);
+            HttpField result = computeFn.apply(name, stream().filter(f -> f.is(name)).toList());
+            return result != null ? put(result) : remove(name);
         }
 
         /**
@@ -1371,6 +1468,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable remove(HttpHeader header)
         {
+            Objects.requireNonNull(header);
             Iterator<HttpField> i = iterator();
             while (i.hasNext())
             {
@@ -1408,6 +1506,7 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
          */
         default Mutable remove(String name)
         {
+            Objects.requireNonNull(name);
             for (ListIterator<HttpField> i = listIterator(); i.hasNext(); )
             {
                 HttpField f = i.next();
@@ -1602,6 +1701,11 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
                 return true;
             }
 
+            public HttpField onReplaceField(HttpField oldField, HttpField newField)
+            {
+                return newField;
+            }
+
             @Override
             public int size()
             {
@@ -1623,8 +1727,45 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
                 {
                     field = onAddField(field);
                     if (field != null)
-                        return _fields.add(field);
+                        _fields.add(field);
                 }
+                return this;
+            }
+
+            @Override
+            public Mutable put(HttpField field)
+            {
+                Objects.requireNonNull(field);
+                // rewrite put to ensure that removes are called before replace
+                int put = -1;
+                ListIterator<HttpField> i = _fields.listIterator();
+                while (i.hasNext())
+                {
+                    HttpField f = i.next();
+                    if (f.isSameName(field))
+                    {
+                        if (put < 0)
+                            put = i.previousIndex();
+                        else if (onRemoveField(f))
+                            i.remove();
+                    }
+                }
+
+                if (put < 0)
+                {
+                    field = onAddField(field);
+                    if (field != null)
+                        _fields.add(field);
+                }
+                else
+                {
+                    i = _fields.listIterator(put);
+                    HttpField old = i.next();
+                    field = onReplaceField(old, field);
+                    if (field != null)
+                        i.set(field);
+                }
+
                 return this;
             }
 
@@ -1702,9 +1843,9 @@ public interface HttpFields extends Iterable<HttpField>, Supplier<HttpFields>
                         }
                         else
                         {
-                            if (last != null && onRemoveField(last))
+                            if (last != null)
                             {
-                                field = onAddField(field);
+                                field = onReplaceField(last, field);
                                 if (field != null)
                                 {
                                     last = null;
